# SaveFiWeb

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  IMpcommand.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: ci.yml
components/: ClientOnly.tsx  Dashboard.tsx  DashboardPreview.tsx  DexMonitor.tsx  FAQ.tsx  FinalCTA.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  Layout.tsx  Navbar.tsx  SaveRateController.tsx  SaveSOLInfo.tsx  SharedWalletButton.tsx  Toast.tsx  TokenUtility.tsx  TransactionHistory.tsx  VaultManager.tsx  WalletConnectionProvider.tsx  WalletProvider.tsx  WhySaveFi.tsx
hooks/: useSaveFi.ts
idl/: savefi.json
pages/: _app.tsx  dashboard.tsx  faq.tsx  index.tsx  set-plan.tsx  token.tsx  vault.tsx
programs/savefi/: Carg.bk  Cargo.toml
programs/savefi/src/: lib copy.rs  lib.rs  lib2.rs  lib3.rs
public/: vault-animation.json
scripts/: create-admin-keypair.ts  generate-favicon.js  idl.json  initialize_mints.ts  test_savefi.ts
scripts/idl/: savefi.json
styles/: globals.css  wallet.css
tests/: savefi.ts
utils/: anchor.ts  constants.ts  idl.ts  program.ts  tokens.ts
